2004-11-08  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* configure.in: require libpixman 0.1.2 since
	src/cairo_glitz_surface.c depends on two new functions of 0.1.2 -
	pixman_format_get_masks and pixman_image_get_format

2004-11-05  Graydon Hoare  <graydon@redhat.com>

	* src/cairo_ft_font.c: Change the signs of a variety of 
	metrics, which were backwards.
	* src/cairo_gstate.c (_cairo_gstate_clip): Return early if we 
	found a rectangular clip at all, not just in error case.
	* src/cairo_xlib_surface.c 
	(_xlib_glyphset_cache_create_entry): Give render glyphset entry the
	negative bbox offsets it wants, not the bearings.

2004-11-04  Carl Worth  <cworth@cworth.org>

	* test/text_cache_crash.c: Add new test demonstrating assertion
	failure in cairo_cache_lookup.

	* test/text_rotate.c: Add new test showing problems with rotated
	text.

2004-11-04  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_glitz_surface.c (cairo_set_target_glitz): 
	cairo_glitz_surface_create now takes a reference to the glitz
	surface, so it shouldn't be done here anymore.
	Removed feature_mask from cairo_glitz_surface_t.
	Removed support for CAIRO_OPERATOR_SATURATE.
	(cairo_glitz_surface_create): Take a reference to the glitz
	surface and no need to get surface features anymore.
	Tracking changes to glitz.

	* configure.in: Require version 0.3.0 of glitz.

	* src/cairo_gstate.c (_cairo_gstate_clip): Fixed return status.

2004-11-01  Olivier Andrieu  <oliv__a@users.sourceforge.net>

	* src/cairo.h: remove cairo_ft_font_destroy() prototype.

2004-10-28  Carl Worth  <cworth@cworth.org>

	* Makefile.am (release-verify-newer): Abort release-publish if
	there's already a published tar file with the current version.
	(release-publish): Add code to update the LATEST-package-version
	file.

2004-10-27  Carl Worth  <cworth@cworth.org>

	* configure.in: Increment CAIRO_VERSION to 0.2.0.

	* NEWS: Add notes for snapshot 0.2.0.
	Add note on reverted tessellation regression bugs.
